<resources>
    <string name="app_name">微阅读</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="action_settings">设置</string>
    <string name="home">首页</string>
    <string name="bookmarks">收藏</string>
    <string name="change_theme">切换主题</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="action_share">分享</string>
    <string name="news">新闻</string>
    <string name="photo">图片</string>
    <string name="video">视频</string>
    <string name="night_mode">夜间模式</string>
    <string name="db_error">数据库出错了</string>
    <string name="load_error">加载失败</string>
    <string name="retry_after">请稍后重试</string>
    <string name="internet_error">网络异常,请检查网络设置</string>
    <string name="splash_slogan">Go through the every bit of life</string>
    <string name="splash_version">V 1.0.0</string>
    <string name="splash_copyright">Copyright &#169; 2017 WeRead All Rights Reserved\nPowered by Wei Liu</string>
    <string name="channel_manage">频道管理</string>
    <string name="channel_explain">点击可增删/长按并拖拽可排序</string>
    <string name="my_channel">我的频道</string>
    <string name="more_channel">更多频道</string>
    <string name="loading">加载中…</string>
    <string name="transition_photos">transition_animation_news_photos</string>
    <string name="photo_collections">图集：%1$s</string>
    <string name="retry_refresh_news">点我一下 重新加载</string>
    <string name="no_more">没有更多了</string>
    <string name="send">发送</string>
    <string name="beautychat">美女陪聊</string>
    <string name="beauty_chat_hello">您好，我是林志玲，很高兴为您服务！</string>
    <string name="beijing">北京</string>
    <string name="liuwei">刘威</string>
    <string name="linzhiling">林志玲</string>
    <string name="action_day_night_yes">夜间模式</string>
    <string name="action_clear_charlog">清除聊天记录</string>
    <string name="action_grid_them">网格模式</string>
    <string name="action_line_them">列表模式</string>
    <string name="clear_success">清除成功</string>
    <string name="news_from">%1$s %2$s</string>
    <string name="copied_to_clipboard">复制成功</string>
    <string name="copied_to_clipboard_failed">复制失败</string>
    <string name="share">分享</string>
    <string name="share_contents">来自「多彩资讯」的分享：%1$s %2$s</string>
    <string name="action_add_to_bookmarks">添加到收藏</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="action_copy_link">复制链接</string>
    <string name="photo_news">图片新闻</string>
    <string name="photo_detail_title">%1$d/%2$d　%3$s</string>
    <string name="detail">详情</string>
    <string name="beauty">美女</string>
    <string name="bigphoto">大图片</string>
    <string name="exit_prompt">再按一次退出程序</string>
    <string name="reload">重新加载</string>
    <string name="color_palette">Color Palette</string>
    <string name="colors">Colors</string>
    <string name="system_setting">系统设置</string>
    <string name="setting_no_image">开启后在非Wifi下不加载图片</string>
    <string name="no_image_mode">无图模式</string>
    <string name="setting_english">英文</string>
    <string name="clear_glide_cache">清除图片缓存</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="other_server">其他服务</string>
    <string name="weather">天气预报</string>
    <string name="phone_attr">手机号码归属地</string>
    <string name="zip_code">邮编查询</string>
    <string name="recipe">菜谱查询</string>
    <string name="base_station_location">基站定位查询</string>
    <string name="id_card_inquiries">身份证查询</string>
    <string name="the_question_bank">驾考题库</string>
    <string name="train_ticket_inquiries">火车票查询</string>
    <string name="football_five_league">足球五大联赛</string>
    <string name="zg_solution_dream">周公解梦</string>
    <string name="setting_image_save_path">设置图片保存路径</string>
    <string name="setting_video_save_path">设置视频保存路径</string>
    <string name="create_dir_faile">创建目录失败</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="added_to_collection">已添加到收藏</string>
    <string name="deled_to_collection">已从收藏中删除</string>
    <string name="down_fail">下载失败</string>
    <string name="download_completed">下载完成</string>
</resources>
