<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/photo" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/video" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_menu_bookmarks"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/nav_beautychat"
            android:icon="@drawable/chat"
            android:title="@string/beautychat" />
        <item
            android:id="@+id/nav_otherserver"
            android:icon="@drawable/ic_menu_other"
            android:title="@string/other_server" />
    </group>
    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_night_mode"
                android:icon="@drawable/night"
                android:title="@string/night_mode"
                app:actionLayout="@layout/drawer_switch"
                app:showAsAction="always" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>