<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_day_night_yes"
        android:orderInCategory="100"
        android:title="@string/action_day_night_yes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_charlog"
        android:orderInCategory="100"
        android:title="@string/action_clear_charlog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_grid_them"
        android:orderInCategory="100"
        android:title="@string/action_grid_them"
        app:showAsAction="never" />
</menu>
